@@ -1,10 +1,10 @@
 This package was debianized by Joerg Jaspert (JJ) <joerg@goliathbbs.dnsalias.net> on
 Tue,  5 Mar 2002 21:30:10 +0100.
 
-It was downloaded from http://husky.physcip.uni-stuttgart.de/
+It was downloaded from http://husky.sourceforge.net/
 
 Upstream Author(s): The Husky Team. Look at the Web-Page at
-http://husky.physcip.uni-stuttgart.de/team.html
+http://husky.sourceforge.net/team.html
 
 First Maintainer: Joerg Jaspert (JJ) <joerg@goliathbbs.dnsalias.net>
 Since 1 Aug 2002 new Maintainer is Pavel Andreew <pavel@collage.etel.ru>.
